# flappy

./: Cargo.toml  README.md
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: bird.rs  bird_individual.rs  brain.rs  eye.rs  lib.rs  pipe.rs  rectangle.rs  world.rs
www/: index.html  index.js  package-lock.json  package.json  style.css
